2007-03-07  Stefan Jahn  <stefan@lkcc.org>

	* twistedpair.cpp: Again fixed attenuation model.  Added
	an appropriate DC model.

2007-03-06  Stefan Jahn  <stefan@lkcc.org>

	* twistedpair.cpp: Added preliminary loss model as well as
	the noise models for AC and SP due to the losses.

2007-03-01  Stefan Jahn  <stefan@lkcc.org>

	* devices/diode.cpp: Fixed derivative for knee current.

2007-02-28  Stefan Jahn  <stefan@lkcc.org>

	* devices/diode.cpp: Implemented knee current parameter Ikf.

2007-02-21  Stefan Jahn  <stefan@lkcc.org>

	* tline4p.cpp: Implemented transient simulation model of
	the 4-terminal transmission line.

2007-02-18  Michael Margraf  <michael.margraf@alumni.tu-berlin.de>

	* microstrip/mscross.cpp: fixed bug in calcCap() equation

2007-02-12  Stefan Jahn  <stefan@lkcc.org>

	* microstrip/msstep.cpp: Fixed Z-parameter matrix calculation.
	Thanks <c.peschke@gsi.de> for pointing out this bug.

2007-02-07  Stefan Jahn  <stefan@lkcc.org>

	* microstrip/mscross.cpp: Hopefully finally fixed the
	microstrip cross junction model.

2007-02-05  Stefan Jahn  <stefan@lkcc.org>

	* microstrip/mscross.cpp: Applied asymmetric corrections for
	the microstrip cross junction model.  There is still an open
	issue about the formulas...

2007-02-04  Stefan Jahn  <stefan@lkcc.org>

	* microstrip/mscross.cpp: Started to implement the microstrip
	cross.  Testing needed.  Also extension for asymmetric cross
	need some extra lines, yet.

2007-02-03  Stefan Jahn  <stefan@lkcc.org>

	* vprobe.cpp: Saving both real and imaginary part of the
	voltage across of the voltage probe.  Fixes the values
	given during AC analysis.

2007-01-29  Stefan Jahn  <stefan@lkcc.org>

	* tline4p.cpp, twistedpair.cpp: Fixed S-parameter calculation.

2007-01-27  Stefan Jahn  <stefan@lkcc.org>

	* microstrip/bondwire.cpp: Fixed some bugs in the bondwire
	model.

2007-01-21  Stefan Jahn  <stefan@lkcc.org>

	* twistedpair.h (class twistedpair): New component: twisted
	pair transmission line.
