@@ -1,3 +1,10 @@
+2007-03-11  Stefan Jahn  <stefan@lkcc.org>
+
+	* microstrip/mscross.cpp: Compute omega only once.
+
+	* microstrip/bondwire.cpp: Fixed some typos in the doxygen
+	documentation/comments.
+
 2007-03-07  Stefan Jahn  <stefan@lkcc.org>
 
 	* twistedpair.cpp: Again fixed attenuation model.  Added
